--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "dev": "node --watch server.js",
     "start": "node server.js",
     "create-admin": "node scripts/createAdmin.js",
-    "add-products": "node scripts/addSampleProducts.js"
+    "add-products": "node scripts/addSampleProducts.js",
+    "import:dummy": "node scripts/import_dummy_products.js"
   },
   "dependencies": {
     "express": "^4.18.2",
